@@ -2,9 +2,11 @@ DIST febootstrap-2.10.tar.gz 585680 RMD160 07ec1f3e8d4be83f6834807436e35bac19094
 DIST febootstrap-2.11.tar.gz 585966 RMD160 30da19379add6d4ac9476211e6c2e7b8d66cdc52 SHA1 53c85ef472c8a642646e3c246c1129f2275695c5 SHA256 e99d0411702eb619127cc6e2f79a5f4d2fec3d0524e46069738c5ed5b5dc69f4
 DIST febootstrap-2.7.tar.gz 516193 RMD160 fe8b87070b5f5c2f0084b0d27b9028fefefbabd2 SHA1 4926cf07cb81c6ce1c3775f33cc9bb4d6c297a65 SHA256 bc2feb25abe55a04b8ba64794d2979384cbe98e94a299f14072e5b9b2803de86
 DIST febootstrap-2.8.tar.gz 545573 RMD160 bdf95ce81989352afe516be078cb9902c7d539cc SHA1 e8fe265cb16bc286c24facc4bed6a428ef174f0a SHA256 956cc16f2a193f229e3b9e5943003b63f45d835fe37a2a289f7e72ff3b0e7735
+DIST febootstrap-3.0.tar.gz 560017 RMD160 17203e3cd51663fb861e83580436e01e4846b94b SHA1 b1b62c22d94ed78f8ac383261634c7b994fd9fdc SHA256 f8ef2cf917b9931deb7568f346e31062d564a44a7951ec5307868ae5496979bd
 EBUILD febootstrap-2.10.ebuild 688 RMD160 a276d0477cb4c2b27a707cf787fa367d46f3fde7 SHA1 fe5d3221bdbd87f01cb4beff9fab1caee61ac0e1 SHA256 b1be8184dc84ad838623d3d88318cc24949b95284ec3675b7b5c109de85d8ae4
 EBUILD febootstrap-2.11.ebuild 688 RMD160 a276d0477cb4c2b27a707cf787fa367d46f3fde7 SHA1 fe5d3221bdbd87f01cb4beff9fab1caee61ac0e1 SHA256 b1be8184dc84ad838623d3d88318cc24949b95284ec3675b7b5c109de85d8ae4
 EBUILD febootstrap-2.7.ebuild 604 RMD160 c31e059c8e04f61eeae6dd643839f495a1991099 SHA1 3c61e7f9a37e4a5c2edae73ae2901655c6214fca SHA256 d9bf00fac282cd08d7725f6149f6d942f561658752a622eca4a2d80a4f7c4948
 EBUILD febootstrap-2.8.ebuild 604 RMD160 c31e059c8e04f61eeae6dd643839f495a1991099 SHA1 3c61e7f9a37e4a5c2edae73ae2901655c6214fca SHA256 d9bf00fac282cd08d7725f6149f6d942f561658752a622eca4a2d80a4f7c4948
-MISC ChangeLog 709 RMD160 bbf925c42f7393746bda81f280b9e5ec0e024767 SHA1 0c06fa656e80e881a2861e48ff4b9a8cb80b335d SHA256 6c9a73fec2791b39f5c5a107348843cddccb26ed0c65c7d97997ccbb5534949b
+EBUILD febootstrap-3.0.ebuild 604 RMD160 6cdc72e1b33942aeff41f0d553ccf391a1e11527 SHA1 8c940e1b0cadd0ceab9d52d78d05b7d51aea5c49 SHA256 433c72520c4e4932782650f6575988e38acda972c73b24f692d8122d14672c87
+MISC ChangeLog 834 RMD160 ac03cb0af49a7bc73527af3935917186568445fc SHA1 c120bc285ce71686b9a99548fd91949227dcd1a5 SHA256 68de901f2d162f75710fde79fedfb242833dab80ad0ace1ef71c2ab97050bc5f
 MISC metadata.xml 234 RMD160 999fab2c5a4c8873483e0398d546c46ba7db2244 SHA1 3d5a13a261145e4709af5370bea86199398cfe87 SHA256 dacedc07094188052fc35617485c22f7e7ea2914326c8df6a671fc6584930efc
