@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*febootstrap-3.0 (05 Dec 2010)
+
+  05 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru> +febootstrap-3.0.ebuild:
+  new version
+
 *febootstrap-2.11 (05 Dec 2010)
 
   05 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru> +febootstrap-2.11.ebuild:
